--- a/styles.css
+++ b/styles.css
@@ -286,8 +286,8 @@ html {
 }
 
 .about-img {
-  max-width: 60%; /* Ensures the image resizes responsively */
-  height: auto;
+  max-width: auto; /* Ensures the image resizes responsively */
+  height: 80&;
   border-radius: 50%; /* Makes the image round */
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1); /* Optional: Adds a subtle shadow */
 }
