--- a/styles.css
+++ b/styles.css
@@ -283,8 +283,8 @@ html {
 }
 
 .about-img {
-  max-width: auto; /* Ensures the image resizes responsively */
-  height: 80%;
+  max-width: 80%; /* Ensures the image resizes responsively */
+  height: auto;
   border-radius: 50%; /* Makes the image round */
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1); /* Optional: Adds a subtle shadow */
 }
