--- a/style.css
+++ b/style.css
@@ -39,36 +39,11 @@ body {
 header {
   width: 100%;
   text-align: center;
-  background: white;
+  align-items: center;
+  background: rgb(255, 255, 255);
   color: var(--black-color);
   padding: 1em 0;
   box-shadow: 10px 10px 10px #e7e7e7;
-}
-
-
-
-.nav-btn {
-  border: none;
-  cursor: pointer;
-  font-weight: 500;
-  font-size: 0.94rem;
-  border-radius: 10px;
-  white-space: nowrap;
-  color: var(--black-color);
-  padding: 0.4rem 0.75rem;
-  background: var(--light-gray-color);
-}
-
-.nav-btn.hover {
-  color: var(--white-color);
-  background: var(--secondary-color);
-  transform: scale(1.05);
-}
-
-.nav-btn.active {
-  color: var(--white-color);
-  background: var(--black-color);
-  pointer-events: none;
 }
 
 
@@ -126,23 +101,32 @@ p {
 }
 
 /* Navigation Styles */
-nav ul {
-  list-style: none;
-  padding: 0;
-  margin: 0;
-  display: flex;
-  justify-content: center; /* Center navigation links */
-  gap: 15px;
+nav {
+  display: flex; /* Flexbox for navigation items */
+  gap: 15px; /* Space between navigation buttons */
 }
 
-nav ul li {
-  display: inline;
+.nav-btns {
+  color: rgb(0, 0, 0); /* White icon color */
+  font-size: 18px; /* Icon size */
+  text-decoration: none; /* Remove underline from links */
+  padding: 5px 10px; /* Padding around icons */
+  transition: background-color 0.3s, transform 0.3s; /* Smooth transition for hover effect and scale */
+  justify-content: center; 
+  margin-left: 115px;
 }
 
-nav ul li a {
-  color: var(--black-color);
-  text-decoration: none;
+.nav-btns:hover {
+  background-color: #e8e7e7;
+  border-radius: 5px; /* Rounded corners on hover */
+  transform: scale(1.5); /* Scale icons by 1.5 on hover */
 }
+
+.nav-btns i {
+  display: inline-block; /* Keep icons inline */
+  vertical-align: middle; /* Align icons vertically */
+}
+
 
 /* Form Styles */
 .form-group {
@@ -342,14 +326,15 @@ footer {
 
 /* Mobile styles */
 @media (max-width: 600px) {
-  nav ul {
-    display: block;
+  nav .nav-btns {
+    display: flex;
     text-align: center; /* Center navigation links */
+    margin-left: 5px;
   }
 
-  nav ul li {
+  nav .nav-btns i {
     display: block;
-    margin: 10px 10px;
+    margin-left: 45px;
   }
 
   main {
@@ -357,23 +342,22 @@ footer {
   }
 
   header {
-    width: 425px;
+    width: 600px;
     margin-left: 100px;
   }
 
   footer {
-    width: 425px;
-    margin-left: 100px;
+    width: 600px;
   }
 
   .section-box {
     width: 425px;
-    margin-left: 100px;
+    margin-left: 140px;
   }
 
   .project-grid {
     width: 425px;
-    margin-left: 100px;
+    margin-left: 140px;
   }
 
   .skill {  
